kubernetes/core/external-dns/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: external-dns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-dns
  namespace: external-dns
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-external-dns
      app.kubernetes.io/name: external-dns
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 7979
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: adguard
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: adguard
              app.kubernetes.io/instance: adguard-adguard
              app.kubernetes.io/name: adguard-adguard
      ports:
        - port: 80
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
  namespace: external-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-external-dns
      app.kubernetes.io/name: external-dns
  egress:
    - toEntities:
        - kube-apiserver
